Bug 1911951 - Fix hostname validity check - don't create servers with hostnames that could not be used. r=babolivier,tobyp

Instead, use <key>.invalid as hostname.
For CreateIncomingServer(), error out directly.

Differential Revision: https://phabricator.services.mozilla.com/D219747

--HG--
extra : rebase_source : d4e2a1ea642a50cc39f2ec6b1be77c3b85269e20